<resources>
    <string name="app_name">Builders backyard</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_account">MyAccount</string>
    <string name="contentdescription">contentdescription</string>
    <string name="title_activity_chat">Chat Activity</string>
    <string name="title_activity_home">Home Activity</string>
   <string name="facebook_app_id">292953524148325</string>
    <string name="title_activity_view_image">ViewImage</string>
   <!-- SharedPreferences-->
   <string name="userId">UserId</string>
   <string name="loginStatus">LoginStatus</string>
   <string name="randomNumber">RandomNumber</string>
   <string name="latitude">Latitude</string>
   <string name="longitude">Longitude</string>
    <string name="current_latitude">Latitude</string>
    <string name="current_longitude">Longitude</string>
   <string name="jobTitle">JobTitle</string>
   <string name="productTitle">ProductTitle</string>
   <string name="tradeTitle">TradeTitle</string>
   <string name="receiverIdProduct">ReceiverIdProduct</string>
   <string name="conversationIdProduct">ConversationIdProduct</string>
    <string name="ConvertedString">ConvertedString</string>
    <string name="senderId">SenderId</string>
    <string name="ownerId">OwnerId</string>
    <string name="receiverIncaseOfSameOwnerId">receiverIncaseOfSameOwnerId</string>
    <string name="social_login">social_login</string>
    <string name="settingsNet">settingnet</string>
   <!-- MyAccount-->
    <string name="label_adv">MyAds</string>
    <string name="txt_post_ad">Post New Ad</string>
    <string name="txt_current_ad">My Current Ad</string>
    <string name="txt_delete_ad">Delete Existing Ad</string>
    <string name="label_chats">Chats</string>
    <string name="txt_message">Message</string>
    <string name="label_others">Others</string>
    <string name="txt_setting">Settings</string>
    <string name="title_activity_notification">Notification</string>

    <!-- Login Activity -->
    <string name="title_activity_login">Sign in</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="click_here">Click here</string>
    <string name="connect_fb">Connect with Facebook</string>
    <string name="connect_twitter">Connect with Twitter</string>
    <string name="no_account">Donot have an account yet?</string>
    <string name="sign_up">SIGN UP</string>

    <!-- Signup Activity -->
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact">Phone No</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_pwd">Confirm Password</string>

    <!-- Post Ad Activity -->
    <string name="title_activity_post_ad">PostAd</string>
    <string name="product_title">Product Title</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="product_image">Product Image</string>
    <string name="enter_zipcode">Enter Zipcode</string>
    <string name="enter_category">Choose Category</string>
    <string name="next">NEXT</string>
    <string name="title_activity_post_ad2">PostAd2</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_messages_list">MessagesList</string>
    <string name="title_activity_search">Search</string>

    <!-- Post Ad2 Activity -->
    <string name="additionaldetails">Additional Details</string>
    <string name="post_btn_text">POST YOUR ADD</string>


    <!--Search Activity-->
    <string name="locality">Search by Locality</string>
    <string name="category">Search by Category</string>
    <string name="brand">Search by Brand</string>
    <string name="keyword">Search by Keyword</string>
    <string name="price_heading">Select Price Range</string>
    <string name="price_range">0 to 10K</string>
    <string name="miles_heading">Near Me</string>
    <string name="miles_range">0 to 2000Miles</string>
    <string name="search_btn_txt">Search</string>
    <string name="cancel_btn_txt">Cancel</string>

    <!-- Product Activity -->
    <string name="title_activity_product">Product</string>
    <string name="title_activity_product_username">Lumber</string>
    <string name="title_activity_product_money">$3500</string>
    <string name="title_activity_product_description">Description</string>
    <string name="title_activity_product_details">Contact Details</string>
    <string name="title_activity_chat1">Chat1</string>
    <string name="title_activity_home1">Home1</string>
    <string name="title_activity_product1">Product1</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="title_activity_pay_pal">PayPalActivity</string>
<!--Edit Profile-->
    <string name="edit_profile">Edit Profile</string>
</resources>
