<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/splash"
    android:fillViewport="true"

    tools:context="com.itpro.buildersbackyard.ui.activity.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center"
        android:padding="15dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/applogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">



            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/user" />

            <TextView
                android:id="@+id/splash_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Builders Backyard"
                android:textColor="#ffffff"
                android:textSize="@dimen/textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/applogo"
            android:orientation="vertical">


            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_signup_height"

                android:background="@drawable/bg_input"
                android:hint="@string/first_name"

                android:inputType="textPersonName"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_signup_height"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_input"
                android:hint="@string/last_name"

                android:inputType="textPersonName"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <EditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_signup_height"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_input"
                android:hint="@string/contact"
                android:inputType="number"
                android:maxLength="10"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_signup_height"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_input"
                android:hint="@string/email_address"

                android:inputType="textEmailAddress"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_signup_height"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_input"
                android:hint="@string/password"

                android:inputType="textPassword"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_signup_height"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_input"
                android:hint="@string/confirm_pwd"

                android:inputType="textPassword"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_signup_height"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_pink_btn"
                android:text="@string/sign_up"
                android:textColor="#fff" />


        </LinearLayout>

        <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:mlpb_progress_color="@android:color/holo_blue_light"/>
    </RelativeLayout>

</ScrollView>
