<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splash"
    android:scrollbars="none"
    tools:context="com.itpro.buildersbackyard.ui.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center"
        android:padding="15dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/applogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@mipmap/bb_logo" />

            <TextView
                android:id="@+id/splash_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Builders Backyard"
                android:textColor="#ffffff"
                android:textSize="@dimen/textsize" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/applogo"

            android:background="@drawable/bg_login_fields"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:weightSum="4">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.7"
                android:inputType="textEmailAddress"
                android:background="#ffffff"
                android:drawableLeft="@mipmap/email"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/username"
                android:padding="5dp"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight=".6"
                android:background="#ababab" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.7"
                android:background="#fff"
                android:drawableLeft="@mipmap/password"
                android:drawablePadding="15dp"
                android:drawableStart="@mipmap/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true" />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_layout"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_green_btn"
            android:text="@string/login"
            android:textColor="#fff" />

        <LinearLayout
            android:id="@+id/forgot_pwd_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pwd"
                android:textColor="#fff"
                android:textSize="@dimen/activity_social_txt_textsize" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/click_here"
                android:textColor="@color/light_pink"
                android:textSize="@dimen/activity_social_txt_textsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/social_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_pwd_layout"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/fb_login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1.5"
                android:background="@drawable/bg_facebook"
                android:drawableLeft="@mipmap/fb"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:drawableStart="@mipmap/fb"
                android:gravity="start|center_vertical"
                android:text="@string/connect_fb"
                android:textAllCaps="false"

                android:textColor="#fff"
                android:textSize="14sp" />

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/twitter_login_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.5"
                android:background="@drawable/bg_twitter"
                android:drawableLeft="@mipmap/twitter"
                android:drawablePadding="5dp"
                android:drawableStart="@mipmap/twitter"
                android:gravity="start|center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/connect_twitter"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="@dimen/activity_social_btn_textsize" />

            <!--<Button
                android:id="@+id/twitter_login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.5"
                android:background="@drawable/bg_twitter"
                android:drawableLeft="@mipmap/twitter"
                android:drawablePadding="5dp"
                android:drawableStart="@mipmap/twitter"
                android:gravity="start|center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/connect_twitter"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="@dimen/activity_social_btn_textsize" />-->


        </LinearLayout>

        <TextView
            android:id="@+id/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/social_layout"
            android:layout_marginTop="35dp"
            android:text="@string/no_account"
            android:textColor="#fff"
            android:textSize="@dimen/activity_social_txt_textsize" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_user"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_pink_btn"
            android:text="@string/sign_up"
            android:textColor="#fff" />

        <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:mlpb_progress_color="@android:color/holo_blue_light" />

    </RelativeLayout>
</ScrollView>
